# lima-api

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: code_testing.yml  docs.yml  publish_package.yml
docs/examples/: stapi.py  swagger_petstore.py
docs/source/: about.md  conf.py  exceptions.md  index.md  migrate.md  quickstart.md
docs/source/advance/: dynamic_payload.md  index.md  parameters.md  recomendations.md  retry_processor.md  settings.md
docs/source/advance/usecases/: datatable.md  index.md  json_patch.md  opentracing.md  upload_files.md
src/lima_api/: __init__.py  config.py  constants.py  core.py  exceptions.py  parameters.py  retry_processors.py  utils.py
src/lima_api/code_generator/: cli_gen.py  main.py  schemas.py  templates.py  utils.py
tests/: client.py  test_api.py  test_expections.py  test_parameters.py  test_socket.py  test_tracing.py
tests/resources/: calculadora_openapi.json
